<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">FunRunApp</string>
	<string name="spinner_prompt">Choose a Category</string>
	<string name="show_directions">Show directions</string>
	<string name="hide_directions">Hide directions</string>

	<!-- PREFERENCES constants -->
	<string name="speak_directions_pref">speak_directions_pref</string>
	<string name="email_pref">email_pref</string>
	<string name="search_radius_pref">search_rad_pref</string>
	<string name="accept_radius_pref">accept_rad_pref</string>
	<string name="min_run_pref">min_run_pref</string>
	<string name="path_segment_pref">path_segment_pref</string>

	<string name="default_speak_directions">true</string>
	<string name="default_email">Enter an e-mail</string>
	<string name="default_search_radius">1000</string>
	<string name="default_accept_radius">20</string>
	<string name="default_min_run">100</string>
	<string name="default_path_segment">10</string>

	<!-- END PREFERENCES -->

	<string name="custom_search">(Prompt for Name)</string>
	<string name="park">Park</string>
	<string name="cafe">Cafe</string>
	<string name="school">School or University</string>
	<string name="pizza">Pizza</string>
	<string name="smoothies">Smoothie Joint</string>
	<string name="juice_bar">Juice Bar</string>
	<string name="food_cart">Food cart</string>
	<string name="book_store">Bookstore</string>
	<string name="art_gallery">Art Gallery</string>
	<string name="zoo">Zoo</string>
	<string name="shopping_mall">Shopping Mall</string>
	<string name="brew_pub">Brew Pub</string>
	<string name="clothing_store">Clothing Store</string>
	<string name="bowling_alley">Bowling Alley</string>
	<string name="movie_theater">Movie Theater</string>
	<string name="bicycle_store">Bicycle Store</string>
	<string name="florist">Florist</string>
	<string name="library">Library</string>
	<string name="museum">Museum</string>
	<string name="pet_store">Pet Store</string>
	<string name="bar">Bar</string>
	<string name="aquarium">Aquarium</string>
	<string name="amusement_park">Amusement Park</string>
	<string name="natural_feature">Natural Feature</string>
	<string name="point_of_interest">Point of Interest</string>
</resources>
