<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="preference_screen">

	<PreferenceCategory android:title="Email">
		<EditTextPreference
			android:key="@string/email_pref" 
			android:title="Default E-mail address"
			android:summary="E-mail to send run data to"
			android:defaultValue="@string/default_email"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Distances">
		<ListPreference
			android:key="@string/accept_radius_pref"
			android:title="Arrival distance"
			android:summary="How close you need to be to get to a place or to complete a step"
			android:entryValues="@array/accept_radius_array"
			android:entries="@array/accept_radius_strings"
			android:defaultValue="@string/default_accept_radius"/>
		<ListPreference
			android:key="@string/min_run_pref"
			android:title="Minimum run distance"
			android:summary="Minimum distance you need to run for data to be saved"
			android:entryValues="@array/min_run_array"
			android:entries="@array/min_run_strings"
			android:defaultValue="@string/default_min_run" />
		<ListPreference
			android:key="@string/path_segment_pref"
			android:title="Length of path segment"
			android:summary="Distance before a new point is saved to the path you run"
			android:entryValues="@array/path_segment_array"
			android:entries="@array/path_segment_strings"
			android:defaultValue="@string/default_path_segment" />
	</PreferenceCategory>

</PreferenceScreen>
